Fix [Feature Sets] spacing between icons

--- a/src/components/Table/table.scss
+++ b/src/components/Table/table.scss
@@ -65,7 +65,13 @@
   }
 
   .targets-cell {
-    min-width: 75px;
+    justify-content: center;
+    flex-wrap: nowrap;
+    min-width: 130px;
+
+    svg {
+      margin: 0 5px;
+    }
   }
 
   &__content {
